@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-06T01:00:14Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 1,
+  "timestamp" : "2022-05-06T08:17:44Z",
+  "count" : 6,
+  "count_minmax" : [ 0, 6 ],
+  "count_prev_day_inc" : 7,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 1,
+  "uniques" : 5,
+  "uniques_minmax" : [ 0, 5 ],
+  "uniques_prev_day_inc" : 6,
   "uniques_prev_day_dec" : 0
 }
