@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T01:00:14Z",
+  "timestamp" : "2022-05-06T08:17:44Z",
   "count_outdated" : 16,
   "uniques_outdated" : 10,
-  "count" : 52,
-  "uniques" : 33,
+  "count" : 58,
+  "uniques" : 38,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 7, 8 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ]
+    },
+    {
+      "timestamp": "2022-05-06T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 0, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 0, 5 ]
     }
   ]
 }
