@@ -1,3 +1,9 @@
+2022-05-06T08:17:44Z:
+* notice: last 14d: all unq: 42 12
+* notice: prev accum: outdated-all outdated-unq / all unq: 16 10 / 52 33
+* notice: next accum: outdated-all outdated-unq / all unq: 16 10 / 58 38
+* notice: prev json diff // prev day diff: unq all: +5 +6 / -0 -0 // +6 +7 / -0 -0
+
 2022-04-30T16:17:21Z:
 * notice: last 14d: all unq: 4 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 8 7
